# zyra-scheduler

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: dataset-clouds.yml  dataset-drought.yml  dataset-enhanced-clouds.yml  dataset-fire.yml  dataset-land_temp.yml  dataset-ozone.yml  dataset-precip-water.yml  dataset-precip.yml  dataset-snow_ice.yml  dataset-sst-anom.yml  dataset-sst.yml  zyra.yml
charts/zyra-workflows/: Chart.yaml  README.md  values.yaml
charts/zyra-workflows/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  pvc.yaml
datasets/: README.md  clouds.env  drought.env  enhanced-clouds.env  fire.env  land_temp.env  ozone.env  precip-water.env  precip.env  snow_ice.env  sst-anom.env  sst.env
k8s/: README.md  cronjob-drought.yaml  cronjob-template.yaml  pvc.yaml
